objects/IPCA_Milestone__c.object
<CustomObject>
    <fields>
        <fullName>Addendum__c</fullName>
        <label>Addendum</label>
        <referenceTo>IP_Config__c</referenceTo>
        <relationshipLabel>IPCA Milestones</relationshipLabel>
        <relationshipName>Milestones</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Index__c</fullName>
        <label>Index</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>When__c</fullName>
        <description>Specific date or turnaround time expression e.g. &quot;4 weeks&quot;</description>
        <label>When</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>IPCA Milestone</label>
    <nameField>
        <label>IP Config Milestone</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>IPCA Milestones</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>